Modifier le poids de la police pour les liens légaux et le bouton "Prendre RDV", ajouter une icône de favicon, mettre à jour les informations de contact et corriger des erreurs typographiques dans plusieurs fichiers HTML.

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -7,6 +7,7 @@
     <title>Accompagnements | Anaïs Clochard Jagot</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -98,17 +99,17 @@
                                 UNIQUE et adapté</b>, pensé en fonction de vos besoins, de votre histoire.</p>
                         <p><i class="fas fa-bullseye"></i> Lors des <strong>séances suivantes</strong>, un travail
                             psychothérapeutique s'engage de
-                            sotre à aller vers un mieux-être au fil du temps.
+                            sorte à aller vers un mieux-être au fil du temps.
                         </p>
                         <p class="quote" style="text-align:center; margin: 0 auto; font-size: 1.1em;">
                             <i class="fas fa-quote-left"></i> <b><i>Je ne comprends pas ce que parler va pouvoir
                                     m'apporter</i></b> <i class="fas fa-quote-right"></i>
                         </p>
-                        <p>La psychothérapie individuelle ne consiste pas à parler seul face à un.e psychologue qui
+                        <p>La psychothérapie individuelle ne consiste pas à parler seul.e face à un.e psychologue qui
                             écoute passivement. Il s'agit bien d'un <b>ECHANGE</b>.
                         </p>
                         <p>Au fil des séances, nous <b>repérons des mécanismes psychiques</b> qui se répètent, nous
-                            <b>mettons du sens sur votre vécu</b>. A votre rythme, vous deveniez plus « outillé.e » pour
+                            <b>mettons du sens sur votre vécu</b>. A votre rythme. Vous devenez plus « outillé.e » pour
                             faire face aux problématiques de départ et à celles qui ont pu émerger au cours de la
                             thérapie.
                         </p>
@@ -153,8 +154,8 @@
                 <h3>Contact</h3>
                 <p><b>Anaïs Clochard Jagot</b><br>
                     11 rue Grandet, 49100 Angers<br>
-                    07.45.70.85.00<br>
-                    anais.c.jagot@gmail.com</p>
+                    07.49.76.85.06<br>
+                    cjagot.anais@gmail.com</p>
                 <p>n° RPPS : 10009466972<br>
                     n° adeli : 499315505</p>
             </div>
