--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Accueil | Anaïs Clochard Jagot</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -51,7 +52,12 @@
                             accompagnement psychothérapeutique adapté à vos besoins.</p>
                     </div>
                     <p>Je propose également des RDV de soutien à domicile réservés aux seniors, aux personnes à mobilité
-                        réduite ou dans l'impossibilité de se déplacer (période pré et postnatale).</p>
+                        réduite ou dans l'impossibilité de se déplacer (période pré et postnatale, maladie invalidante).
+                    </p>
+                    <br /><br /><br />
+                    <a style="text-align:left;" href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot"
+                        class="btn-rdv">Prendre RDV</a>
+                    <a style="text-align:right;" href="accompagnements.html" class="btn-rdv">En Savoir plus</a>
                 </div>
                 <div class="image-content">
                     <img src="images/entree-cabinet.jpg" alt="Photo du cabinet de psychologie">
@@ -66,8 +72,8 @@
                 <h3>Contact</h3>
                 <p><b>Anaïs Clochard Jagot</b><br>
                     11 rue Grandet, 49100 Angers<br>
-                    07.45.70.85.00<br>
-                    anais.c.jagot@gmail.com</p>
+                    07.49.76.85.06<br>
+                    cjagot.anais@gmail.com</p>
                 <p>n° RPPS : 10009466972<br>
                     n° adeli : 499315505</p>
             </div>
