--- a/qui-suis-je.html
+++ b/qui-suis-je.html
@@ -7,6 +7,7 @@
     <title>Qui suis-je ? | Anaïs Clochard Jagot</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -64,7 +65,7 @@
                                     ponctuel</strong> ou pour un accompagnement psychothérapeutique.</li>
                             <li>Je consacre les mardis et mercredis matins aux <strong>séances de soutien à
                                     domicile</strong> pour les seniors, les personnes en situation de handicap, les
-                                personnes dans l’incapacité de se déplacer en période anté ou post-natale.</li>
+                                personnes dans l’incapacité de se déplacer.</li>
                         </ul>
                     </div>
                 </div>
@@ -78,8 +79,8 @@
                 <h3>Contact</h3>
                 <p><b>Anaïs Clochard Jagot</b><br>
                     11 rue Grandet, 49100 Angers<br>
-                    07.45.70.85.00<br>
-                    anais.c.jagot@gmail.com</p>
+                    07.49.76.85.06<br>
+                    cjagot.anais@gmail.com</p>
                 <p>n° RPPS : 10009466972<br>
                     n° adeli : 499315505</p>
             </div>
