--- a/pratique.html
+++ b/pratique.html
@@ -7,6 +7,7 @@
     <title>Pratique | Anaïs Clochard Jagot</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -92,8 +93,8 @@
                 <h3>Contact</h3>
                 <p><b>Anaïs Clochard Jagot</b><br>
                     11 rue Grandet, 49100 Angers<br>
-                    07.45.70.85.00<br>
-                    anais.c.jagot@gmail.com</p>
+                    07.49.76.85.06<br>
+                    cjagot.anais@gmail.com</p>
                 <p>n° RPPS : 10009466972<br>
                     n° adeli : 499315505</p>
             </div>
