--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <div class="section-container">
                 <div class="text-content">
                     <h2>Psychothérapie individuelle adolescents,<br>adultes et seniors.</h2>
+                    <i style="text-align: center;" class="fa-solid fa-leaf"></i>
                     <div class="icon-text">
                         <p>Je vous accueille au <b>cabinet Physio-Grandet</b>, dans le centre d’Angers, pour un
                             accompagnement psychothérapeutique adapté à vos besoins.</p>
