Modifier le style et la structure des sections pour améliorer la présentation, ajouter des classes CSS pour la réactivité et ajuster les titres.

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -43,8 +43,8 @@
     <main>
         <section class="accompagnements-section">
             <div class="section-container">
-                <h1 class="page-title">Accompagnements</h1>
-                <div style="text-align: center; max-width: 800px; margin: 0 auto;">
+                <h1 class="page-title mobile-only">Accompagnements</h1>
+                <div class="paragraph">
                     <p><b>Spécialisée en psychologie du traumatisme</b>, j'accueille une patientèle variée pour des
                         consultations individuelles avec un espace de parole sécure et confidentiel :<br /><br />
                         <b>~ Adolescents (dès 11 ans) - Étudiants - Adultes - Seniors ~</b>
@@ -53,7 +53,7 @@
 
                 <div class="content-image-layout">
                     <div class="text-block">
-                        <h2>Pourquoi venir en consultation ?</h2>
+                        <h2 class="page-subtitle">Pourquoi venir en consultation ?</h2>
                         <p>De nombreuses raisons peuvent amener à s’engager dans un suivi ponctuel ou dans une
                             psychothérapie.</p>
                         <p>Il n'y a <b>pas de « seuil de mal-être »</b> qui justifierait une consultation. Une séance
@@ -89,7 +89,7 @@
                         <img src="images/salle-attente.jpg" alt="Photo d'une séance de psychothérapie">
                     </div>
                     <div class="text-block">
-                        <h2>Comment se déroule une séance ?</h2>
+                        <h2 class="page-subtitle">Comment se déroule une séance ?</h2>
                         <p><i class="fas fa-bullseye"></i> Lors de la <strong>première séance</strong>, nous prenons le
                             temps de faire connaissance et
                             d'instaurer une <strong>relation de confiance</strong>.</p>
@@ -121,7 +121,7 @@
 
                 <div class="content-image-layout">
                     <div class="text-block">
-                        <h2>Mon approche</h2>
+                        <h2 class="page-subtitle">Mon approche</h2>
                         <p>Je travaille essentiellement à partir de <strong>l'approche psychodynamique</strong>.</p>
                         <p>Nous travaillons <strong>A PARTIR des « symptômes », des sensations corporelles, des
                                 croyances,
