--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="section-container">
                 <div class="text-content">
-                    <h2>Psychothérapie individuelle adolescents,<br>adultes et seniors.</h2>
+                    <h2 class="page-subtitle">Psychothérapie individuelle adolescents,<br>adultes et seniors.</h2>
                     <i style="text-align: center;" class="fa-solid fa-leaf"></i>
                     <div class="icon-text">
                         <p>Je vous accueille au <b>cabinet Physio-Grandet</b>, dans le centre d’Angers, pour un
@@ -55,10 +55,11 @@
                     <p>Je propose également des RDV de soutien à domicile réservés aux seniors, aux personnes à mobilité
                         réduite ou dans l'impossibilité de se déplacer (période pré et postnatale, maladie invalidante).
                     </p>
-                    <br /><br /><br />
-                    <a style="text-align:left;" href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot"
-                        class="btn-rdv">Prendre RDV</a>
-                    <a style="text-align:right;" href="accompagnements.html" class="btn-rdv">En Savoir plus</a>
+                    <div class="buttons-container">
+                        <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot"
+                            class="btn-rdv">Prendre RDV</a>
+                        <a href="accompagnements.html" class="btn-rdv">En Savoir plus</a>
+                    </div>
                 </div>
                 <div class="image-content">
                     <img src="images/entree-cabinet.jpg" alt="Photo du cabinet de psychologie">
