--- a/pratique.html
+++ b/pratique.html
@@ -43,10 +43,10 @@
     <main>
         <section class="pratique-container">
             <div class="section-container">
-                <h1 class="page-title">Pratique</h1>
+                <h1 class="page-title mobile-only">Pratique</h1>
                 <div class="map-and-prices">
                     <div class="map-section">
-                        <h2>Accès au cabinet</h2>
+                        <h2 class="page-subtitle">Accès au cabinet</h2>
                         <img src="images/map-parkings.jpg" alt="Carte de localisation du cabinet">
                         <h3>Transports en commun :</h3>
                         <ul>
@@ -57,7 +57,7 @@
                         </ul>
                     </div>
                     <div class="prices-section">
-                        <h2>Tarifs et moyens de paiements acceptés</h2>
+                        <h2 class="page-subtitle">Tarifs et moyens de paiements acceptés</h2>
                         <ul>
                             <li>1ère séance - 1h15: 65€</li>
                             <li>Séance de suivi - 1h: 65€</li>
