--- a/qui-suis-je.html
+++ b/qui-suis-je.html
@@ -43,7 +43,7 @@
     <main>
         <section class="pratique-container">
             <div class="section-container">
-                <h1 class="page-title">Qui suis-je ?</h1>
+                <h1 class="page-title mobile-only">Qui suis-je ?</h1>
                 <div class="map-and-prices">
                     <div class="about-image">
                         <img src="images/portrait.jpg" alt="Anaïs Clochard Jagot">
