--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="logo">
                 <img src="images/logo.png" alt="Logo Anaïs Clochard Jagot">
             </div>
+            <div class="mobile-only" style="text-transform:capitalize"><a>Anaïs Clochard Jagot</a></div>
             <div class="header-right">
                 <nav class="main-nav">
                     <button class="hamburger" aria-label="Ouvrir le menu de navigation">
