Mettre à jour les informations de contact avec des liens cliquables et améliorer le style des éléments de contact

--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="contact-info">
-                <h3>Contact</h3>
-                <p><b>Anaïs Clochard Jagot</b><br>
-                    11 rue Grandet, 49100 Angers<br>
-                    07.49.76.85.06<br>
-                    cjagot.anais@gmail.com</p>
+                <p><b><a style="font-size: 1.3em;">Anaïs Clochard Jagot</a></b><br>
+                    <a href="https://maps.app.goo.gl/Dg8CWfjR2iEefG8w7" target="_blank" class="contact">11 rue Grandet,
+                        49100
+                        Angers</a><br />
+                    <a href="tel:0112233445" class="contact">07.49.76.85.06</a><br />
+                    <a href="mailto:cjagot.anais@gmail.com" class="contact">cjagot.anais@gmail.com</a>
+                </p>
                 <p>n° RPPS : 10009466972<br>
                     n° adeli : 499315505</p>
             </div>
