Ajouter une page de mentions légales et mettre à jour les liens de contact dans le pied de page

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -43,30 +43,36 @@
     </header>
 
     <main>
-        <section class="psychotherapy-section">
-            <div class="image-content">
-                <img src="images/premiere-page.png" alt="Photo du cabinet de psychologie">
-            </div>
-            <div class="section-container">
-                <div class="text-content">
-                    <h2 class="page-subtitle">Psychothérapie individuelle adolescents,<br>adultes et seniors.</h2>
-                    <i style="text-align: center;" class="fa-solid fa-leaf"></i>
-                    <div class="icon-text">
-                        <p>Je vous accueille au <b>cabinet Physio-Grandet</b>, dans le centre d’Angers, pour un
-                            accompagnement psychothérapeutique adapté à vos besoins.</p>
-                    </div>
-                    <p>Je propose également des RDV de soutien à domicile réservés aux seniors, aux personnes à mobilité
-                        réduite ou dans l'impossibilité de se déplacer (période pré et postnatale, maladie invalidante).
-                    </p>
-                    <div class="buttons-container">
-                        <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot"
-                            class="btn-rdv">Prendre RDV</a>
-                        <a href="accompagnements.html" class="btn-rdv">En Savoir plus</a>
-                    </div>
-                </div>
-                <div class="image-content">
-                    <img src="images/entree-cabinet.jpg" alt="Photo du cabinet de psychologie">
-                </div>
+        <section class="section-container">
+            <div>
+                <h1>Mentions Légales</h1>
+                <p>Conformément aux dispositions de l'article 6-III de la loi n° 2004-575 du 21 juin 2004 pour la
+                    confiance dans l'économie numérique, il est précisé aux utilisateurs du site [Nom de votre site]
+                    l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi.</p>
+                <h2>1. Propriétaire et Éditeur du site</h2>
+                <ul>
+                    <li><strong>Nom ou Dénomination sociale :</strong> [Nom & Prénom de la personne physique ou
+                        Dénomination sociale de l'entreprise]</li>
+                    <li><strong>Adresse :</strong> [Votre adresse postale]</li>
+                    <li><strong>Adresse e-mail :</strong> [Votre adresse e-mail]</li>
+                    <li><strong>Téléphone :</strong> [Votre numéro de téléphone]</li>
+                    <li><strong>Numéro SIRET (si applicable) :</strong> [Votre numéro SIRET]</li>
+                </ul>
+
+                <h2>2. Hébergeur</h2>
+                <ul>
+                    <li><strong>Nom :</strong> [Nom de l'hébergeur de votre site]</li>
+                    <li><strong>Adresse :</strong> [Adresse de l'hébergeur]</li>
+                    <li><strong>Téléphone :</strong> [Numéro de téléphone de l'hébergeur]</li>
+                </ul>
+
+                <h2>3. Propriété intellectuelle</h2>
+                <p>L'ensemble de ce site relève de la législation française et internationale sur le droit d'auteur et
+                    la propriété intellectuelle. Tous les droits de reproduction sont réservés. Le contenu de ce site
+                    (textes, images, logos, etc.) est la propriété exclusive de [Nom du propriétaire du site]. Toute
+                    reproduction, représentation, modification, publication, adaptation, de tout ou partie des éléments
+                    du site, quel que soit le moyen ou le procédé utilisé, est formellement interdite sans un accord
+                    écrit préalable.</p>
             </div>
         </section>
     </main>
@@ -83,7 +89,7 @@
                 </p>
                 <p>n° RPPS : 10009466972<br />
                     n° adeli : 499315505<br />
-                    <a href="mentions-legales.html" target="_blank" class="contact">Mentions Légales</a>
+                    <a href="#" class="contact">Mentions Légales</a>
                 </p>
             </div>
         </div>
