--- a/pratique.html
+++ b/pratique.html
@@ -99,13 +99,10 @@
                     <a href="tel:0112233445" class="contact">07.49.76.85.06</a><br />
                     <a href="mailto:cjagot.anais@gmail.com" class="contact">cjagot.anais@gmail.com</a>
                 </p>
-                <p>n° RPPS : 10009466972<br>
-                    n° adeli : 499315505</p>
-            </div>
-            <div class="legal-links">
-                <a href="#">Politique de confidentialité</a>
-                <a href="#">Mentions Légales</a>
-                <a href="#">Politique de cookies (UE)</a>
+                <p>n° RPPS : 10009466972<br />
+                    n° adeli : 499315505<br />
+                    <a href="mentions-legales.html" target="_blank" class="contact">Mentions Légales</a>
+                </p>
             </div>
         </div>
     </footer>
