Ajouter des images mobiles pour améliorer l'affichage sur les appareils mobiles dans la page des accompagnements

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -54,6 +54,9 @@
                 </div>
 
                 <div class="content-image-layout">
+                    <div class="image-block mobile-only">
+                        <img src="images/cabinet-photo-3.jpeg" alt="Cabinet Photo 3">
+                    </div>
                     <div class="text-block">
                         <h2 class="page-subtitle">Pourquoi venir en consultation ?</h2>
                         <p>De nombreuses raisons peuvent amener à s’engager dans un suivi ponctuel ou dans une
@@ -82,13 +85,13 @@
                         </ul>
                     </div>
                     <div class="image-block">
-                        <img src="images/entree-cabinet.jpg" alt="Photo d'une consultation">
+                        <img src="images/cabinet-photo-2.jpeg" alt="Cabinet Photo 2">
                     </div>
                 </div>
 
                 <div class="content-image-layout">
                     <div class="image-block img-mobile">
-                        <img src="images/salle-attente.jpg" alt="Photo d'une séance de psychothérapie">
+                        <img src="images/cabinet-photo-3.jpeg" alt="Cabinet Photo 3">
                     </div>
                     <div class="text-block">
                         <h2 class="page-subtitle">Comment se déroule une séance ?</h2>
@@ -122,6 +125,9 @@
                 </div>
 
                 <div class="content-image-layout">
+                    <div class="image-block mobile-only">
+                        <img src="images/cabinet-photo-1.jpeg" alt="Cabinet Photo 1">
+                    </div>
                     <div class="text-block">
                         <h2 class="page-subtitle">Mon approche</h2>
                         <p>Je travaille essentiellement à partir de <strong>l'approche psychodynamique</strong>.</p>
@@ -142,8 +148,8 @@
                         <p>Lorsque la mise en mots est compliquée, j'utilise des <b>outils de médiation</b> adaptés à
                             l'âge et à la problématique de chacun.</p>
                     </div>
-                    <div class="image-block">
-                        <img src="images/salle-attente 3 .jpg" alt="Photo illustrant l'approche">
+                    <div class="image-block img-mobile">
+                        <img src="images/cabinet-photo-1.jpeg" alt="Cabinet Photo 1">
                     </div>
                 </div>
             </div>
